{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 40,
  "lineage": "0cbd2588-7007-e448-3772-7c41d563c368",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "ticketgo-prod-alb-logs-783111403254",
                "enabled": true,
                "prefix": "alb-logs"
              }
            ],
            "client_keep_alive": 3600,
            "desync_mitigation_mode": "defensive",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:783111403254:loadbalancer/app/ticketgo-prod-alb/dc858de230f81371",
            "idle_timeout": 60,
            "internal": false,
            "load_balancer_type": "application",
            "name": "ticketgo-prod-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0121be11807d406b8"
            ],
            "subnets": [
              "subnet-069842242683f46c3",
              "subnet-0a796061da929cca9"
            ],
            "tags": {
              "Name": "ticketgo-prod-alb"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "ticketgo-prod-alb",
              "Owner": "infra-team",
              "Project": "TicketGo-Peru"
            },
            "xff_header_processing_mode": "append"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_role.rds_monitoring",
            "module.cache.aws_elasticache_parameter_group.redis",
            "module.cache.aws_elasticache_replication_group.main",
            "module.cache.aws_elasticache_subnet_group.main",
            "module.compute.aws_s3_bucket.alb_logs",
            "module.compute.data.aws_caller_identity.current",
            "module.database.aws_backup_plan.rds",
            "module.database.aws_backup_selection.rds",
            "module.database.aws_backup_vault.main",
            "module.database.aws_db_instance.primary",
            "module.database.aws_db_parameter_group.postgres",
            "module.database.aws_db_subnet_group.main",
            "module.database.aws_kms_alias.backup",
            "module.database.aws_kms_key.backup",
            "module.networking.aws_cloudwatch_log_group.vpc_flow_logs",
            "module.networking.aws_eip.nat",
            "module.networking.aws_flow_log.main",
            "module.networking.aws_iam_role.vpc_flow_logs",
            "module.networking.aws_iam_role_policy.vpc_flow_logs",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private_app",
            "module.networking.aws_route_table.private_data",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.private_app",
            "module.networking.aws_route_table_association.private_data",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_security_group.vpc_endpoints",
            "module.networking.aws_subnet.private_app",
            "module.networking.aws_subnet.private_data",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.aws_vpc_endpoint.cloudwatch_logs",
            "module.networking.aws_vpc_endpoint.ecr_api",
            "module.networking.aws_vpc_endpoint.ecr_dkr",
            "module.networking.aws_vpc_endpoint.s3",
            "module.networking.aws_vpc_endpoint.secretsmanager",
            "module.security.aws_iam_role.backup",
            "module.security.aws_iam_role.ecs_task",
            "module.security.aws_iam_role.ecs_task_execution",
            "module.security.aws_iam_role.lambda_worker",
            "module.security.aws_iam_role_policy.ecs_execution_secrets",
            "module.security.aws_iam_role_policy.ecs_task_app",
            "module.security.aws_iam_role_policy.lambda_worker_policy",
            "module.security.aws_iam_role_policy_attachment.backup_managed",
            "module.security.aws_iam_role_policy_attachment.backup_restore",
            "module.security.aws_iam_role_policy_attachment.ecs_execution_managed",
            "module.security.aws_iam_role_policy_attachment.lambda_vpc",
            "module.security.aws_secretsmanager_secret.db_credentials",
            "module.security.aws_secretsmanager_secret.redis_url",
            "module.security.aws_secretsmanager_secret_version.db_credentials",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.ecs",
            "module.security.aws_security_group.lambda",
            "module.security.aws_security_group.rds",
            "module.security.aws_security_group.redis",
            "module.security.random_password.db_password"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:783111403254:targetgroup/ticketgo-prod-tg-api/1171252b319c80d2",
            "arn_suffix": "targetgroup/ticketgo-prod-tg-api/1171252b319c80d2",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:783111403254:targetgroup/ticketgo-prod-tg-api/1171252b319c80d2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ticketgo-prod-tg-api",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ticketgo-prod-tg-api"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "ticketgo-prod-tg-api",
              "Owner": "infra-team",
              "Project": "TicketGo-Peru"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0fc592cefcec04842"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_role.rds_monitoring",
            "module.cache.aws_elasticache_parameter_group.redis",
            "module.cache.aws_elasticache_replication_group.main",
            "module.cache.aws_elasticache_subnet_group.main",
            "module.database.aws_backup_plan.rds",
            "module.database.aws_backup_selection.rds",
            "module.database.aws_backup_vault.main",
            "module.database.aws_db_instance.primary",
            "module.database.aws_db_parameter_group.postgres",
            "module.database.aws_db_subnet_group.main",
            "module.database.aws_kms_alias.backup",
            "module.database.aws_kms_key.backup",
            "module.networking.aws_cloudwatch_log_group.vpc_flow_logs",
            "module.networking.aws_eip.nat",
            "module.networking.aws_flow_log.main",
            "module.networking.aws_iam_role.vpc_flow_logs",
            "module.networking.aws_iam_role_policy.vpc_flow_logs",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private_app",
            "module.networking.aws_route_table.private_data",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.private_app",
            "module.networking.aws_route_table_association.private_data",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_security_group.vpc_endpoints",
            "module.networking.aws_subnet.private_app",
            "module.networking.aws_subnet.private_data",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.aws_vpc_endpoint.cloudwatch_logs",
            "module.networking.aws_vpc_endpoint.ecr_api",
            "module.networking.aws_vpc_endpoint.ecr_dkr",
            "module.networking.aws_vpc_endpoint.s3",
            "module.networking.aws_vpc_endpoint.secretsmanager",
            "module.security.aws_iam_role.backup",
            "module.security.aws_iam_role.ecs_task",
            "module.security.aws_iam_role.ecs_task_execution",
            "module.security.aws_iam_role.lambda_worker",
            "module.security.aws_iam_role_policy.ecs_execution_secrets",
            "module.security.aws_iam_role_policy.ecs_task_app",
            "module.security.aws_iam_role_policy.lambda_worker_policy",
            "module.security.aws_iam_role_policy_attachment.backup_managed",
            "module.security.aws_iam_role_policy_attachment.backup_restore",
            "module.security.aws_iam_role_policy_attachment.ecs_execution_managed",
            "module.security.aws_iam_role_policy_attachment.lambda_vpc",
            "module.security.aws_secretsmanager_secret.db_credentials",
            "module.security.aws_secretsmanager_secret.redis_url",
            "module.security.aws_secretsmanager_secret_version.db_credentials",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.ecs",
            "module.security.aws_security_group.lambda",
            "module.security.aws_security_group.rds",
            "module.security.aws_security_group.redis",
            "module.security.random_password.db_password"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-037f39b8e23b9042d",
            "arn": "arn:aws:ec2:us-east-2:783111403254:elastic-ip/eipalloc-037f39b8e23b9042d",
            "association_id": "eipassoc-0a1a2c4794a73da76",
            "domain": "vpc",
            "id": "eipalloc-037f39b8e23b9042d",
            "network_border_group": "us-east-2",
            "network_interface": "eni-088e7e99d30428030",
            "private_dns": "ip-10-0-1-54.us-east-2.compute.internal",
            "private_ip": "10.0.1.54",
            "public_dns": "ec2-52-14-117-39.us-east-2.compute.amazonaws.com",
            "public_ip": "52.14.117.39",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ticketgo-prod-eip-nat-1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "ticketgo-prod-eip-nat-1",
              "Owner": "infra-team",
              "Project": "TicketGo-Peru"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0db95e250e847496b",
            "arn": "arn:aws:ec2:us-east-2:783111403254:elastic-ip/eipalloc-0db95e250e847496b",
            "association_id": "eipassoc-0eb56a6b8096c9b15",
            "domain": "vpc",
            "id": "eipalloc-0db95e250e847496b",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0a72f2145461f67ad",
            "private_dns": "ip-10-0-2-242.us-east-2.compute.internal",
            "private_ip": "10.0.2.242",
            "public_dns": "ec2-3-136-133-183.us-east-2.compute.amazonaws.com",
            "public_ip": "3.136.133.183",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ticketgo-prod-eip-nat-2"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "ticketgo-prod-eip-nat-2",
              "Owner": "infra-team",
              "Project": "TicketGo-Peru"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:783111403254:internet-gateway/igw-0cc940a01679caa43",
            "id": "igw-0cc940a01679caa43",
            "owner_id": "783111403254",
            "tags": {
              "Name": "ticketgo-prod-igw"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "ticketgo-prod-igw",
              "Owner": "infra-team",
              "Project": "TicketGo-Peru"
            },
            "vpc_id": "vpc-0fc592cefcec04842"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-037f39b8e23b9042d",
            "association_id": "eipassoc-0a1a2c4794a73da76",
            "connectivity_type": "public",
            "id": "nat-0cf47a77de1ca1cd8",
            "network_interface_id": "eni-088e7e99d30428030",
            "private_ip": "10.0.1.54",
            "public_ip": "52.14.117.39",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a796061da929cca9",
            "tags": {
              "Name": "ticketgo-prod-nat-1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "ticketgo-prod-nat-1",
              "Owner": "infra-team",
              "Project": "TicketGo-Peru"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0db95e250e847496b",
            "association_id": "eipassoc-0eb56a6b8096c9b15",
            "connectivity_type": "public",
            "id": "nat-087648b404c761335",
            "network_interface_id": "eni-0a72f2145461f67ad",
            "private_ip": "10.0.2.242",
            "public_ip": "3.136.133.183",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-069842242683f46c3",
            "tags": {
              "Name": "ticketgo-prod-nat-2"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "ticketgo-prod-nat-2",
              "Owner": "infra-team",
              "Project": "TicketGo-Peru"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:783111403254:route-table/rtb-09ffe5edc01ef1e0d",
            "id": "rtb-09ffe5edc01ef1e0d",
            "owner_id": "783111403254",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cf47a77de1ca1cd8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ticketgo-prod-rt-private-app-1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "ticketgo-prod-rt-private-app-1",
              "Owner": "infra-team",
              "Project": "TicketGo-Peru"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc592cefcec04842"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:783111403254:route-table/rtb-0bc854fc99bb3b925",
            "id": "rtb-0bc854fc99bb3b925",
            "owner_id": "783111403254",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-087648b404c761335",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ticketgo-prod-rt-private-app-2"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "ticketgo-prod-rt-private-app-2",
              "Owner": "infra-team",
              "Project": "TicketGo-Peru"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc592cefcec04842"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:783111403254:route-table/rtb-07ca04cfa7855e416",
            "id": "rtb-07ca04cfa7855e416",
            "owner_id": "783111403254",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cf47a77de1ca1cd8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ticketgo-prod-rt-private-data-1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "ticketgo-prod-rt-private-data-1",
              "Owner": "infra-team",
              "Project": "TicketGo-Peru"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc592cefcec04842"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:783111403254:route-table/rtb-04d2876d5ea369fd1",
            "id": "rtb-04d2876d5ea369fd1",
            "owner_id": "783111403254",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-087648b404c761335",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ticketgo-prod-rt-private-data-2"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "ticketgo-prod-rt-private-data-2",
              "Owner": "infra-team",
              "Project": "TicketGo-Peru"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc592cefcec04842"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:783111403254:route-table/rtb-0eb42e7afcbf14f04",
            "id": "rtb-0eb42e7afcbf14f04",
            "owner_id": "783111403254",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cc940a01679caa43",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ticketgo-prod-rt-public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "ticketgo-prod-rt-public",
              "Owner": "infra-team",
              "Project": "TicketGo-Peru"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc592cefcec04842"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f07539f12f9142d",
            "route_table_id": "rtb-09ffe5edc01ef1e0d",
            "subnet_id": "subnet-0c635ec3737d626b0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private_app",
            "module.networking.aws_subnet.private_app",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0ea2b9481a08f13",
            "route_table_id": "rtb-0bc854fc99bb3b925",
            "subnet_id": "subnet-0fc128a8ec115c2e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private_app",
            "module.networking.aws_subnet.private_app",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b687ff0a9c3608eb",
            "route_table_id": "rtb-07ca04cfa7855e416",
            "subnet_id": "subnet-065c7554e5bb19ac3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private_data",
            "module.networking.aws_subnet.private_data",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4d5dd6e1d0e3fa6",
            "route_table_id": "rtb-04d2876d5ea369fd1",
            "subnet_id": "subnet-0d46d4b2ceb3c358e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private_data",
            "module.networking.aws_subnet.private_data",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1b62cb514775079",
            "route_table_id": "rtb-0eb42e7afcbf14f04",
            "subnet_id": "subnet-0a796061da929cca9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc6de8f8a9fe3c31",
            "route_table_id": "rtb-0eb42e7afcbf14f04",
            "subnet_id": "subnet-069842242683f46c3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:783111403254:security-group/sg-0645e3d0c70585919",
            "description": "Trafico HTTPS desde VPC hacia Interface Endpoints",
            "egress": [],
            "id": "sg-0645e3d0c70585919",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPS desde recursos dentro del VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ticketgo-prod-sg-vpce",
            "name_prefix": "",
            "owner_id": "783111403254",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ticketgo-prod-sg-vpce"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "ticketgo-prod-sg-vpce",
              "Owner": "infra-team",
              "Project": "TicketGo-Peru"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc592cefcec04842"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:783111403254:subnet/subnet-0c635ec3737d626b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c635ec3737d626b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "783111403254",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ticketgo-prod-private-app-1",
              "Tier": "private-app"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "ticketgo-prod-private-app-1",
              "Owner": "infra-team",
              "Project": "TicketGo-Peru",
              "Tier": "private-app"
            },
            "vpc_id": "vpc-0fc592cefcec04842"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:783111403254:subnet/subnet-0fc128a8ec115c2e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc128a8ec115c2e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "783111403254",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ticketgo-prod-private-app-2",
              "Tier": "private-app"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "ticketgo-prod-private-app-2",
              "Owner": "infra-team",
              "Project": "TicketGo-Peru",
              "Tier": "private-app"
            },
            "vpc_id": "vpc-0fc592cefcec04842"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:783111403254:subnet/subnet-065c7554e5bb19ac3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065c7554e5bb19ac3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "783111403254",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ticketgo-prod-private-data-1",
              "Tier": "private-data"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "ticketgo-prod-private-data-1",
              "Owner": "infra-team",
              "Project": "TicketGo-Peru",
              "Tier": "private-data"
            },
            "vpc_id": "vpc-0fc592cefcec04842"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:783111403254:subnet/subnet-0d46d4b2ceb3c358e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d46d4b2ceb3c358e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "783111403254",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ticketgo-prod-private-data-2",
              "Tier": "private-data"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "ticketgo-prod-private-data-2",
              "Owner": "infra-team",
              "Project": "TicketGo-Peru",
              "Tier": "private-data"
            },
            "vpc_id": "vpc-0fc592cefcec04842"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:783111403254:subnet/subnet-0a796061da929cca9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a796061da929cca9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "783111403254",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ticketgo-prod-public-1",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "ticketgo-prod-public-1",
              "Owner": "infra-team",
              "Project": "TicketGo-Peru",
              "Tier": "public"
            },
            "vpc_id": "vpc-0fc592cefcec04842"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:783111403254:subnet/subnet-069842242683f46c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069842242683f46c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "783111403254",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ticketgo-prod-public-2",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "ticketgo-prod-public-2",
              "Owner": "infra-team",
              "Project": "TicketGo-Peru",
              "Tier": "public"
            },
            "vpc_id": "vpc-0fc592cefcec04842"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:783111403254:vpc/vpc-0fc592cefcec04842",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04042798a6b42422f",
            "default_route_table_id": "rtb-030ca4464dd7f439b",
            "default_security_group_id": "sg-0db2b4368ac4ef85e",
            "dhcp_options_id": "dopt-0ac4a3f54a3399922",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fc592cefcec04842",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-030ca4464dd7f439b",
            "owner_id": "783111403254",
            "tags": {
              "Name": "ticketgo-prod-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "ticketgo-prod-vpc",
              "Owner": "infra-team",
              "Project": "TicketGo-Peru"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudwatch_logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:783111403254:vpc-endpoint/vpce-0734b9ea8d4e36ae6",
            "dns_entry": [
              {
                "dns_name": "vpce-0734b9ea8d4e36ae6-cabw3dt6.logs.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0734b9ea8d4e36ae6-cabw3dt6-us-east-2b.logs.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0734b9ea8d4e36ae6-cabw3dt6-us-east-2a.logs.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "logs.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z04111532XN0X6FYNSGX7"
              },
              {
                "dns_name": "logs.us-east-2.api.aws",
                "hosted_zone_id": "Z0422032HCH5OZ1P1FOB"
              },
              {
                "dns_name": "streaming-logs.us-east-2.api.aws",
                "hosted_zone_id": "Z04220393RZQCEZT6HSRT"
              },
              {
                "dns_name": "streaming-logs.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z02976583H74U5FPPRBDT"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0734b9ea8d4e36ae6",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0159ed20cde593aab",
              "eni-0d6db9f8b9a279330"
            ],
            "owner_id": "783111403254",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0645e3d0c70585919"
            ],
            "service_name": "com.amazonaws.us-east-2.logs",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.4",
                "subnet_id": "subnet-0c635ec3737d626b0"
              },
              {
                "ipv4": "10.0.12.82",
                "subnet_id": "subnet-0fc128a8ec115c2e1"
              }
            ],
            "subnet_ids": [
              "subnet-0c635ec3737d626b0",
              "subnet-0fc128a8ec115c2e1"
            ],
            "tags": {
              "Name": "ticketgo-prod-vpce-logs"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "ticketgo-prod-vpce-logs",
              "Owner": "infra-team",
              "Project": "TicketGo-Peru"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0fc592cefcec04842"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.vpc_endpoints",
            "module.networking.aws_subnet.private_app",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:783111403254:vpc-endpoint/vpce-01efc6902e0084820",
            "dns_entry": [
              {
                "dns_name": "vpce-01efc6902e0084820-xik3d9qy.api.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-01efc6902e0084820-xik3d9qy-us-east-2b.api.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-01efc6902e0084820-xik3d9qy-us-east-2a.api.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "api.ecr.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z09529252MSJ3Z3BD7V0Y"
              },
              {
                "dns_name": "ecr.us-east-2.api.aws",
                "hosted_zone_id": "Z02973002VMO5TIC1VFH9"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01efc6902e0084820",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-019664df540085bc1",
              "eni-0467e3efa9893717c"
            ],
            "owner_id": "783111403254",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0645e3d0c70585919"
            ],
            "service_name": "com.amazonaws.us-east-2.ecr.api",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.189",
                "subnet_id": "subnet-0c635ec3737d626b0"
              },
              {
                "ipv4": "10.0.12.95",
                "subnet_id": "subnet-0fc128a8ec115c2e1"
              }
            ],
            "subnet_ids": [
              "subnet-0c635ec3737d626b0",
              "subnet-0fc128a8ec115c2e1"
            ],
            "tags": {
              "Name": "ticketgo-prod-vpce-ecr-api"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "ticketgo-prod-vpce-ecr-api",
              "Owner": "infra-team",
              "Project": "TicketGo-Peru"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0fc592cefcec04842"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.vpc_endpoints",
            "module.networking.aws_subnet.private_app",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:783111403254:vpc-endpoint/vpce-0cb815d6a3e94ff18",
            "dns_entry": [
              {
                "dns_name": "vpce-0cb815d6a3e94ff18-ilcl0e4v.dkr.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0cb815d6a3e94ff18-ilcl0e4v-us-east-2b.dkr.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0cb815d6a3e94ff18-ilcl0e4v-us-east-2a.dkr.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "dkr.ecr.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z09518293HCE6LTM3I76G"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z09518293HCE6LTM3I76G"
              },
              {
                "dns_name": "dkr-ecr.us-east-2.on.aws",
                "hosted_zone_id": "Z04119191ZRFS6TXXYVIZ"
              },
              {
                "dns_name": "*.dkr-ecr.us-east-2.on.aws",
                "hosted_zone_id": "Z04119191ZRFS6TXXYVIZ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0cb815d6a3e94ff18",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-050beda1271418731",
              "eni-0cb20d70d02e8e871"
            ],
            "owner_id": "783111403254",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0645e3d0c70585919"
            ],
            "service_name": "com.amazonaws.us-east-2.ecr.dkr",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.71",
                "subnet_id": "subnet-0c635ec3737d626b0"
              },
              {
                "ipv4": "10.0.12.29",
                "subnet_id": "subnet-0fc128a8ec115c2e1"
              }
            ],
            "subnet_ids": [
              "subnet-0c635ec3737d626b0",
              "subnet-0fc128a8ec115c2e1"
            ],
            "tags": {
              "Name": "ticketgo-prod-vpce-ecr-dkr"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "ticketgo-prod-vpce-ecr-dkr",
              "Owner": "infra-team",
              "Project": "TicketGo-Peru"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0fc592cefcec04842"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.vpc_endpoints",
            "module.networking.aws_subnet.private_app",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:783111403254:vpc-endpoint/vpce-04ad864e758326d65",
            "cidr_blocks": [
              "18.34.252.0/22",
              "52.219.141.0/24",
              "18.34.72.0/21",
              "52.219.96.0/20",
              "52.219.224.0/21",
              "16.12.60.0/22",
              "52.219.232.0/22",
              "52.219.80.0/20",
              "3.5.128.0/22",
              "52.219.142.0/23",
              "3.5.132.0/23",
              "3.5.92.0/23",
              "3.5.88.0/22",
              "16.12.64.0/22",
              "52.219.212.0/22",
              "52.219.176.0/22"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04ad864e758326d65",
            "ip_address_type": "ipv4",
            "owner_id": "783111403254",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7ba54012",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-04d2876d5ea369fd1",
              "rtb-07ca04cfa7855e416",
              "rtb-09ffe5edc01ef1e0d",
              "rtb-0bc854fc99bb3b925"
            ],
            "service_name": "com.amazonaws.us-east-2.s3",
            "service_region": "us-east-2",
            "state": "available",
            "tags": {
              "Name": "ticketgo-prod-vpce-s3"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "ticketgo-prod-vpce-s3",
              "Owner": "infra-team",
              "Project": "TicketGo-Peru"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0fc592cefcec04842"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private_app",
            "module.networking.aws_route_table.private_data",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:783111403254:vpc-endpoint/vpce-0551e86efd68f53b4",
            "dns_entry": [
              {
                "dns_name": "vpce-0551e86efd68f53b4-jnneevu8.secretsmanager.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0551e86efd68f53b4-jnneevu8-us-east-2a.secretsmanager.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-0551e86efd68f53b4-jnneevu8-us-east-2b.secretsmanager.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "secretsmanager.us-east-2.amazonaws.com",
                "hosted_zone_id": "Z095291918CP99PQSCT5J"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0551e86efd68f53b4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03bc2dad03e81e8b4",
              "eni-0fb7d8d7b1e51a5ac"
            ],
            "owner_id": "783111403254",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0645e3d0c70585919"
            ],
            "service_name": "com.amazonaws.us-east-2.secretsmanager",
            "service_region": "us-east-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.9",
                "subnet_id": "subnet-0c635ec3737d626b0"
              },
              {
                "ipv4": "10.0.12.32",
                "subnet_id": "subnet-0fc128a8ec115c2e1"
              }
            ],
            "subnet_ids": [
              "subnet-0c635ec3737d626b0",
              "subnet-0fc128a8ec115c2e1"
            ],
            "tags": {
              "Name": "ticketgo-prod-vpce-secretsmanager"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "ticketgo-prod-vpce-secretsmanager",
              "Owner": "infra-team",
              "Project": "TicketGo-Peru"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0fc592cefcec04842"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.vpc_endpoints",
            "module.networking.aws_subnet.private_app",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:783111403254:security-group/sg-0121be11807d406b8",
            "description": "Trafico publico HTTPS/HTTP hacia el Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Todo el trafico saliente al VPC (hacia ECS)",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0121be11807d406b8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP desde Internet (redirect a HTTPS en el listener)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS desde Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ticketgo-prod-sg-alb",
            "name_prefix": "",
            "owner_id": "783111403254",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ticketgo-prod-sg-alb"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "ticketgo-prod-sg-alb",
              "Owner": "infra-team",
              "Project": "TicketGo-Peru"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc592cefcec04842"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_cloudwatch_log_group.vpc_flow_logs",
            "module.networking.aws_eip.nat",
            "module.networking.aws_flow_log.main",
            "module.networking.aws_iam_role.vpc_flow_logs",
            "module.networking.aws_iam_role_policy.vpc_flow_logs",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private_app",
            "module.networking.aws_route_table.private_data",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.private_app",
            "module.networking.aws_route_table_association.private_data",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_security_group.vpc_endpoints",
            "module.networking.aws_subnet.private_app",
            "module.networking.aws_subnet.private_data",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.aws_vpc_endpoint.cloudwatch_logs",
            "module.networking.aws_vpc_endpoint.ecr_api",
            "module.networking.aws_vpc_endpoint.ecr_dkr",
            "module.networking.aws_vpc_endpoint.s3",
            "module.networking.aws_vpc_endpoint.secretsmanager"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:783111403254:security-group/sg-08ff368a70bb0afe8",
            "description": "Trafico hacia contenedores ECS Fargate - solo desde el ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Salida total para acceso a AWS APIs, RDS, Redis, SQS",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08ff368a70bb0afe8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Puerto de la app desde el ALB unicamente",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0121be11807d406b8"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "ticketgo-prod-sg-ecs",
            "name_prefix": "",
            "owner_id": "783111403254",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ticketgo-prod-sg-ecs"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "ticketgo-prod-sg-ecs",
              "Owner": "infra-team",
              "Project": "TicketGo-Peru"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc592cefcec04842"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_cloudwatch_log_group.vpc_flow_logs",
            "module.networking.aws_eip.nat",
            "module.networking.aws_flow_log.main",
            "module.networking.aws_iam_role.vpc_flow_logs",
            "module.networking.aws_iam_role_policy.vpc_flow_logs",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private_app",
            "module.networking.aws_route_table.private_data",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.private_app",
            "module.networking.aws_route_table_association.private_data",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_security_group.vpc_endpoints",
            "module.networking.aws_subnet.private_app",
            "module.networking.aws_subnet.private_data",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.aws_vpc_endpoint.cloudwatch_logs",
            "module.networking.aws_vpc_endpoint.ecr_api",
            "module.networking.aws_vpc_endpoint.ecr_dkr",
            "module.networking.aws_vpc_endpoint.s3",
            "module.networking.aws_vpc_endpoint.secretsmanager",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:783111403254:security-group/sg-0ff4cd88367cc0f9f",
            "description": "Security Group para Lambda worker de procesamiento SQS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Salida total para acceder a SQS, RDS y otros servicios",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ff4cd88367cc0f9f",
            "ingress": [],
            "name": "ticketgo-prod-sg-lambda",
            "name_prefix": "",
            "owner_id": "783111403254",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ticketgo-prod-sg-lambda"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "ticketgo-prod-sg-lambda",
              "Owner": "infra-team",
              "Project": "TicketGo-Peru"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc592cefcec04842"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_cloudwatch_log_group.vpc_flow_logs",
            "module.networking.aws_eip.nat",
            "module.networking.aws_flow_log.main",
            "module.networking.aws_iam_role.vpc_flow_logs",
            "module.networking.aws_iam_role_policy.vpc_flow_logs",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private_app",
            "module.networking.aws_route_table.private_data",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.private_app",
            "module.networking.aws_route_table_association.private_data",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_security_group.vpc_endpoints",
            "module.networking.aws_subnet.private_app",
            "module.networking.aws_subnet.private_data",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.aws_vpc_endpoint.cloudwatch_logs",
            "module.networking.aws_vpc_endpoint.ecr_api",
            "module.networking.aws_vpc_endpoint.ecr_dkr",
            "module.networking.aws_vpc_endpoint.s3",
            "module.networking.aws_vpc_endpoint.secretsmanager"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:783111403254:security-group/sg-0d5eb4e56631480e3",
            "description": "Acceso a RDS PostgreSQL exclusivamente desde ECS",
            "egress": [],
            "id": "sg-0d5eb4e56631480e3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL desde ECS Fargate unicamente",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08ff368a70bb0afe8"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "ticketgo-prod-sg-rds",
            "name_prefix": "",
            "owner_id": "783111403254",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ticketgo-prod-sg-rds"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "ticketgo-prod-sg-rds",
              "Owner": "infra-team",
              "Project": "TicketGo-Peru"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc592cefcec04842"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_cloudwatch_log_group.vpc_flow_logs",
            "module.networking.aws_eip.nat",
            "module.networking.aws_flow_log.main",
            "module.networking.aws_iam_role.vpc_flow_logs",
            "module.networking.aws_iam_role_policy.vpc_flow_logs",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private_app",
            "module.networking.aws_route_table.private_data",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.private_app",
            "module.networking.aws_route_table_association.private_data",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_security_group.vpc_endpoints",
            "module.networking.aws_subnet.private_app",
            "module.networking.aws_subnet.private_data",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.aws_vpc_endpoint.cloudwatch_logs",
            "module.networking.aws_vpc_endpoint.ecr_api",
            "module.networking.aws_vpc_endpoint.ecr_dkr",
            "module.networking.aws_vpc_endpoint.s3",
            "module.networking.aws_vpc_endpoint.secretsmanager",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.ecs"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:783111403254:security-group/sg-057e8bed4c58eda2f",
            "description": "Acceso a ElastiCache Redis exclusivamente desde ECS",
            "egress": [],
            "id": "sg-057e8bed4c58eda2f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis desde ECS Fargate unicamente",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08ff368a70bb0afe8"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "ticketgo-prod-sg-redis",
            "name_prefix": "",
            "owner_id": "783111403254",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ticketgo-prod-sg-redis"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "ticketgo-prod-sg-redis",
              "Owner": "infra-team",
              "Project": "TicketGo-Peru"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc592cefcec04842"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_cloudwatch_log_group.vpc_flow_logs",
            "module.networking.aws_eip.nat",
            "module.networking.aws_flow_log.main",
            "module.networking.aws_iam_role.vpc_flow_logs",
            "module.networking.aws_iam_role_policy.vpc_flow_logs",
            "module.networking.aws_internet_gateway.main",
            "module.networking.aws_nat_gateway.main",
            "module.networking.aws_route_table.private_app",
            "module.networking.aws_route_table.private_data",
            "module.networking.aws_route_table.public",
            "module.networking.aws_route_table_association.private_app",
            "module.networking.aws_route_table_association.private_data",
            "module.networking.aws_route_table_association.public",
            "module.networking.aws_security_group.vpc_endpoints",
            "module.networking.aws_subnet.private_app",
            "module.networking.aws_subnet.private_data",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.aws_vpc_endpoint.cloudwatch_logs",
            "module.networking.aws_vpc_endpoint.ecr_api",
            "module.networking.aws_vpc_endpoint.ecr_dkr",
            "module.networking.aws_vpc_endpoint.s3",
            "module.networking.aws_vpc_endpoint.secretsmanager",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.ecs"
          ]
        }
      ]
    }
  ]
}